testsuite/tests/printer/T14343.stderr

T14343.hs:10:9: error:
    • Found hole: _ :: Proxy '[ 'True]
    • In the expression: _ :: Proxy '[ 'True]
      In an equation for ‘test1’: test1 = _ :: Proxy '[ 'True]
    • Relevant bindings include
        test1 :: Proxy '[ 'True] (bound at T14343.hs:10:1)
      Valid hole fits include
        test1 :: Proxy '[ 'True] (defined at T14343.hs:10:1)
        Proxy :: forall {k1} (k2 :: k1). Proxy k2
          with Proxy @'[ 'True]
          (defined at T14343.hs:8:16)

T14343.hs:11:9: error:
    • Found hole: _ :: Proxy '[ '[1]]
    • In the expression: _ :: Proxy '[ '[1]]
      In an equation for ‘test2’: test2 = _ :: Proxy '[ '[1]]
    • Relevant bindings include
        test2 :: Proxy '[ '[1]] (bound at T14343.hs:11:1)
      Valid hole fits include
        test2 :: Proxy '[ '[1]] (defined at T14343.hs:11:1)
        Proxy :: forall {k1} (k2 :: k1). Proxy k2
          with Proxy @'[ '[1]]
          (defined at T14343.hs:8:16)

T14343.hs:12:9: error:
    • Found hole: _ :: Proxy '[ '("Symbol", 1)]
    • In the expression: _ :: Proxy '[ '("Symbol", 1)]
      In an equation for ‘test3’: test3 = _ :: Proxy '[ '("Symbol", 1)]
    • Relevant bindings include
        test3 :: Proxy '[ '("Symbol", 1)] (bound at T14343.hs:12:1)
      Valid hole fits include
        test3 :: Proxy '[ '("Symbol", 1)] (defined at T14343.hs:12:1)
        Proxy :: forall {k1} (k2 :: k1). Proxy k2
          with Proxy @'[ '("Symbol", 1)]
          (defined at T14343.hs:8:16)
